# astra-network-analytical

./: .clang-format  .gitignore  .gitmodules  AnalyticalBackend.sh  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Configuration.json  Event.cc  EventQueueEntry.cc  LICENSE  README.md  analytical.cc  analytical.hh  example_network.yml  main.cc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml  untriaged.md
.github/workflows/: check-clang-format.yml  test_congestion_aware_macos.yml  test_congestion_aware_ubuntu.yml  test_congestion_unaware_macos.yml  test_congestion_unaware_ubuntu.yml
analytical/: CMakeLists.txt  CODEOWNERS  LICENSE  README.md  main.cc
analytical/api/: AnalyticalNetwork.cc  AnalyticalNetwork.hh  PayloadSizeTracker.cc  PayloadSizeTracker.hh  SendRecvTrackingMap.cc  SendRecvTrackingMapValue.cc  SendRecvTrackingMapValue.hh
analytical/event-queue/: Event.cc  Event.hh  EventQueue.cc  EventQueue.hh  EventQueueEntry.cc  EventQueueEntry.hh
analytical/helper/: NetworkConfigParser.cc  NetworkConfigParser.hh
analytical/src/: main.cc
analytical/src/api/: AnalyticalNetwork.cc  AnalyticalNetwork.hh  PayloadSizeTracker.cc  SendRecvTrackingMap.cc  SendRecvTrackingMap.hh  SendRecvTrackingMapValue.hh
analytical/src/event-queue/: Event.cc  EventQueue.cc  EventQueue.hh  EventQueueEntry.cc  EventQueueEntry.hh
analytical/src/helper/: NetworkConfigParser.cc  NetworkConfigParser.hh  json.hh
analytical/src/topology/: HierarchicalTopology.hh  HierarchicalTopologyConfig.cc
analytical/topology/: HierarchicalTopologyConfig.cc  Topology.hh
common/: Common.hh  NetworkFunction.cc  NetworkFunction.cpp  Type.hh
common/event-queue/: Event.cc  Event.cpp  Event.hh  EventList.cc  EventList.cpp  EventList.hh  EventQueue.cc  EventQueue.cpp  EventQueue.hh
common/network-parser/: NetworkParser.cc  NetworkParser.cpp  NetworkParser.hh
congestion/: CMakeLists.txt  README.md  main.cc  main.cc.copy
congestion/api/: AstraCongestionApi.cc  AstraCongestionApi.hh  ChunkIdGenerator.hh  EventHandlerTrackerEntry.cc
congestion/event-queue/: Event.hh  EventList.cc  EventQueue.cc  EventQueue.hh
congestion/helper/: CommandLineOptParser.hh  CommandLineParser.cc  NetworkConfigParser.hh  Statistics.cc  Statistics.hh
congestion/network/: Chunk.cc  Link.cc  Link.hh  Node.cc
congestion/topology/: FullyConnected.cc  FullyConnected.hh  Switch.cc  Topology.hh
congestion/type/: Type.hh
congestion_aware/: CMakeLists.txt  example.cc  example.cpp  main.cc  test.cpp
congestion_aware/basic-topology/: BasicTopology.cc  BasicTopology.cpp  BasicTopology.hh  FullyConnected.cc  FullyConnected.cpp  FullyConnected.hh  Ring.cc  Ring.cpp  Ring.hh  Switch.cc  Switch.cpp  Switch.hh
congestion_aware/event-queue/: Event.cc  EventList.hh  EventQueue.cc  EventQueue.hh
congestion_aware/helper/: CommandLineOptParser.hh  CommandLineParser.cc  NetworkConfigParser.cc  NetworkConfigParser.hh
congestion_aware/multi-dim-topology/: MultiDimTopology.cc
congestion_aware/network/: Chunk.cc  Chunk.cpp  Chunk.hh  Device.cc  Device.cpp  Device.hh  Link.cc  Link.cpp  Link.hh  Node.cc  Node.hh  Type.hh
congestion_aware/topology/: FullyConnected.cc  FullyConnected.hh  Helper.cc  Helper.cpp  Helper.hh  Mesh2D.cc  Mesh2D.hh  Ring.cc  Ring.hh  Switch.cc  Switch.hh  Topology.cc  Topology.cpp  Topology.hh
congestion_aware/type/: Type.hh
congestion_unaware/: CMakeLists.txt  example.cc  example.cpp  main.cc
congestion_unaware/api/: SendRecvTrackingMap.cc  SendRecvTrackingMapValue.cc
congestion_unaware/basic-topology/: BasicTopology.cc  BasicTopology.cpp  BasicTopology.hh  FullyConnected.cc  FullyConnected.cpp  FullyConnected.hh  Ring.cc  Ring.cpp  Ring.hh  Switch.cc  Switch.cpp  Switch.hh
congestion_unaware/event-queue/: Event.cc  EventQueue.cc  EventQueue.hh  EventQueueEntry.cc  EventQueueEntry.hh
congestion_unaware/helper/: NetworkConfigParser.cc  NetworkConfigParser.hh  json.hh
congestion_unaware/multi-dim-topology/: MultiDimTopology.cc  MultiDimTopology.cpp  MultiDimTopology.hh
congestion_unaware/src/: main.cc
congestion_unaware/src/api/: AnalyticalNetwork.hh  SendRecvTrackingMap.hh
congestion_unaware/src/event-queue/: Event.cc
congestion_unaware/topology/: FullyConnected.cc  FullyConnected.hh  Helper.cc  Helper.cpp  Helper.hh  HierarchicalTopology.cc  HierarchicalTopology.hh  HierarchicalTopologyConfig.hh  Ring.cc  Ring.hh  Switch.cc  Switch.hh  Topology.cc  Topology.cpp  Topology.hh  TopologyConfig.cc  TopologyConfig.hh
congestion_unaware_obsolete/: example.cc
congestion_unaware_obsolete/helper/: NetworkConfigParser.cc  NetworkConfigParser.hh
congestion_unaware_obsolete/topology/: HierarchicalTopology.cc  Topology.cc  Topology.hh
input/: FullyConnected.yml  Ring.yml  Ring_FullyConnected_Switch.yml  Ring_Ring.yml  Switch.yml
src/: AnalyticalNetwork.cc  AnalyticalNetwork.hh  CommandLineParser.cc  CommandLineParser.hh  Event.cc  Event.hh  EventQueue.cc  EventQueue.hh  EventQueueEntry.hh  SendRecvTrackingMap.hh  SendRecvTrackingMapValue.hh  Switch.cc  Switch.hh  Topology.cc  Topology.hh  Torus.cc  Torus.hh  main.cc
src/api/: AnalyticalNetwork.cc  AnalyticalNetwork.hh  PayloadSizeTracker.cc  PayloadSizeTracker.hh  SendRecvTrackingMap.cc  SendRecvTrackingMap.hh  SendRecvTrackingMapValue.cc  SendRecvTrackingMapValue.hh
src/event-queue/: Event.cc  Event.hh  EventQueue.cc  EventQueue.hh  EventQueueEntry.cc  EventQueueEntry.hh  SendRecvTrackingMap.cc  SendRecvTrackingMap.hh  SendRecvTrackingMapValue.cc  SendRecvTrackingMapValue.hh
src/helper/: CommandLineParser.cc  CommandLineParser.hh  NetworkConfigParser.cc  NetworkConfigParser.hh
src/topology/: AllToAll.cc  AllToAll.hh  BasicTopology.cc  BasicTopology.hh  ComplexTopology.cc  ComplexTopology.hh  CostModel.cc  CostModel.hh  DetailedTopology.cc  DetailedTopology.hh  FastTopology.cc  FastTopology.hh  Link.cc  (+20 more)
test/: CMakeLists.txt  test_congestion_aware.cc  test_congestion_aware.cpp  test_congestion_unaware.cc  test_congestion_unaware.cpp
utils/: run_clang_format.sh
(+75 files in other folders)
